# reference_implementations

./: .gitattributes
use_case_a_anomaly_detection/: NBeatsOwnImplementation.py  configuration.json  metrics.json
use_case_b_radio_classification/: configuration.json  metrics.json  resnet_fp_model.h5  rfClassification.xmodel
use_case_b_radio_classification/boardSw/: bash_test_threads.sh  rf_classes.npy  rf_snrs.npy  test_accuracy.py  test_software.sh
use_case_c_multispectral_object_detection/: configuration.json  metrics.json  wildfire_vgg16.h5
use_case_c_multispectral_object_detection/deployment/: miniVggNet.xmodel  miniVggNet_org.xmodel  (+1 more)
use_case_d_image_classification_heavy/: configuration.json  eurosat_densenet121_8313a74f-b4ed-45ff-86c1-9e4605468a3c.hdf5  fpgamodel.xmodel  metrics.json
use_case_e_image_classification_light/: configuration.json  metrics.json  mobilenet4.onnx
use_case_f_image_object_detection/: configuration.json  dpu_yolov4-640.json  dpu_yolov4-640.prototxt  dpu_yolov4-640.xmodel  metrics.json  run_benchmarks.sh
use_case_g_image_segmentation/: configuration.json  ep100_trained_unet_model4_224x224.hdf5  metrics.json
use_case_g_image_segmentation/target_zcu102/: CMakeLists.txt
use_case_g_image_segmentation/target_zcu102/model_dir/: meta.json  unet4.xmodel  unet4_mobilenetv2.xmodel  unet4_resnet50.xmodel
use_case_g_image_segmentation/target_zcu102/scripts/: metrics.py  run_app_mobilenetv2.py  run_app_resnet50.py  run_app_resnet50_pred.py
use_case_g_image_segmentation/target_zcu102/src/: main.cpp  unet.cpp  unet.h
(+45 files in other folders)
